syntax = "proto3";

option csharp_namespace = "Celin";

import "google/protobuf/empty.proto";

package openWeather;

message ForecastResponse
{
	bytes data = 1;
}

message GraphRequest
{
	int32 lastLocation = 1;
	int32 lastGraph = 2;
}

message GraphResponse
{
	int32 location = 1;
	int32 graph = 2; 
	bytes data = 3;
	bytes layout = 4;
	bytes options = 5;
}

service WeatherForecast
{
	rpc GetWeatherForecasts (google.protobuf.Empty) returns (ForecastResponse);
	rpc GetRandomGraph(GraphRequest) returns (GraphResponse);
	rpc GetAnimatedGraph(GraphRequest) returns (stream GraphResponse);
}
